--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/rishabhnmishra/Python_Diwali_Sales_Analysis/blob/main/Diwali_Sales_Analysis.ipynb">
+                <h3 class="heading"><a href="">
 					Restaurant-Site-FE-using-Bootstrap</a></h3>
                 <p>"Restaurant-Site-FE-using-Bootstrap" is a sleek and modern website designed to showcase a restaurant's offerings and ambiance. Utilizing Bootstrap for its frontend development, this website boasts a responsive design that adapts seamlessly to various devices and screen sizes. Visitors can explore the restaurant's menu, view mouth-watering images of dishes, and learn about special promotions or events. 
 					With a user-friendly interface and intuitive navigation, this website provides an immersive dining experience online, enticing potential customers to visit the restaurant in person.</p>
@@ -431,11 +431,11 @@
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry">
-              <a href="https://github.com/rishabhnmishra/Madhav_Store_Analysis_PowerBI/blob/main/Madhav%20Store%20dashboard.jpg" class="block-20 zoom-effect" style="background-image: url('images/proj_3.jpg');">
+              <a href="" class="block-20 zoom-effect" style="background-image: url('images/proj_3.jpg');">
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/rishabhnmishra/Madhav_Store_Analysis_PowerBI/blob/main/Madhav%20Store%20dashboard.jpg">Student Data Management System</a></h3>
+                <h3 class="heading"><a href="">Student Data Management System</a></h3>
                 <p>The "Student Data Management System" is a comprehensive software solution designed to streamline the process of managing student information within educational institutions. This system allows administrators, teachers, and staff to efficiently organize, store, and access student data, including personal details, academic records, attendance, and disciplinary history.</p>
               </div>
             </div>
