--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
 			<div class="row">
     			<div class="col-md-4">
     				<div class="resume-wrap ftco-animate">
-    					<span class="date">2014-2018</span>
+    					<span class="date">September 2022 - Till Date</span>
     					<h2>B V Raju Instistute of Technology</h2>
     					<span class="position">Computer Science</span>
     					<p class="mt-4">Till Date CGPA :9.11/10</p>
