--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
 						<br>
 						<br>
-			            <h2>Passion to learning</h2>
+			            <h2>Passion for Learning</h2>
 
 			            <p><a href="https://www.youtube.com/@anjankumarkamalapur" class="btn btn-primary py-3 px-4">YouTube</a> 
 							<a href="https://github.com/AnjanKumarKamalapur" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
